styles/small.css
* {
    box-sizing: border-box;
    font-family: "Playfair Display", serif;
    margin: 0;
}

header {
    display:grid;
    grid-template-columns: 40px auto 44px;
    align-items:center;
    padding:10px;
    border-bottom:1px solid #ccc;
    background:#f7f7fb;
}

header img {
    width:32px;
}

header span {
    font-size:1.3rem;
    font-weight:bold;
    color:#3a0ca3;
}

.burger {
    background:none;
    border:none;
    font-size:2rem;
    color:#3a0ca3;
}

.burger::before {
    content:"\2630";
}

.burger.show::before {
    content:"\00D7";
}

.links {
    display:none;
    background:#3a0ca3;
}

.links.show {
    display:block;
}

.links ul {
    list-style:none;
}

.links a {
    display:block;
    padding:12px;
    text-decoration:none;
    color:white;
    border-bottom:1px solid rgba(255,255,255,0.2);
}

.links a:hover {
    background:#4361ee;
}

.links li.current {
    background:#4361ee;
}

main {
    padding:15px;
}

h1 {
    margin-bottom:10px;
}

section {
    background:#f4f4f9;
    padding:10px;
    margin-bottom:20px;
    border-radius:6px;
}

section h2 {
    background:#3a0ca3;
    color:white;
    padding:6px;
    font-size:1rem;
    text-align:center;
    margin-bottom:10px;
}

section p {
    padding: 10px 10px;
}

.photo-box, .me-box {
    height:200px;
    background:#ccc;
    border-radius:8px;
}

.photo-box {
    display: flex;
    justify-content: center;
    align-items: center;
}

.type {
    padding:8px 12px;
    margin:6px 4px;
    border:none;
    border-radius:8px;
    background:#4361ee;
    color:white;
    cursor:pointer;
}

.type:hover {
    background:#3a0ca3;
}

.courses {
    margin-top:10px;
    display:grid;
    gap:8px;
}

.course-card {
    background:#dcdcdc;
    padding:10px;
    text-align:center;
    border-radius:6px;
    font-weight:600;
}

.course-card.completed {
    background:#4cc9f0;
    color:#03045e;
}

.course-card.completed::before {
    content: "✔";
}

footer {
    text-align:center;
    padding:15px;
    font-size:.8rem;
    background:#f7f7fb;
}

.socials {
    display:flex;
    justify-content:center;
    gap:20px;
    margin:10px 0;
}

.socials img {
    width:30px;
}

